# qa_hw_16

./: pyproject.toml
